# phy_607

./: README.md  sampling.py
assignment_1/: do_full_backup.sh
assignment_2/: output.out  output_analytic.out  spherical_cow.py
assignment_3/: spring_oscillator.py
assignment_4/: precision.py
inclassassignment2/: assignment2.py  data.csv  data.py
project_1/: README.md  euler_explicit.py  euler_semi.py  euler_sympletic.py  main.py  riemann_sum.py  runge_kutta.py  simpson.py  trapezoidal.py
project_2/: chance_main.py  interaction.py  main.py  pyproject.toml  sampling.py
project_2/RutherfordMC.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
project_2/scripts/: .chance_main.py.swp  interaction.py  main.py  plotting.py
