[project]
name = "RutherfordMC"
version = "0.0.1"
dependencies = [
	"numpy",
	"matplotlib",
	"scipy"
]
authors = [
	{ name = "Chance Jackson", email = "cjacks34@syr.edu"},
	{ name = "Nico O'Neill", email = "neoneill@syr.edu"}
]

description = "A package containing methods to simulate a Rutherford scattering event, including random sampling of scattering particle energy and impact parameter"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent"
]

[project.scripts]
main = "scripts:main"
